<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/loginbg"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        />
    <LinearLayout
        android:layout_marginHorizontal="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/transparentback"
        android:paddingHorizontal="15dp"
        android:paddingVertical="40dp"
        >
        <TextView
            android:id="@+id/titletv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:paddingHorizontal="20dp"
            android:text="@string/forgot"
            android:textColor="#ffff"
            android:textSize="28dp" />
        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/capsuleshapedbutton"
            android:text="@string/send" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/capsuleshapedbutton"
            android:backgroundTint="@color/teal_200"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>