<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/loginbg"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:id="@+id/passwordcheck"
        android:layout_marginHorizontal="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/transparentback"
        android:paddingHorizontal="15dp"
        android:paddingVertical="40dp"
        >

        <TextView
            android:id="@+id/titletv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:paddingHorizontal="20dp"
            android:text="@string/updateemail"
            android:textColor="#ffff"
            android:textSize="25dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/passwordfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingStart="10dp"
                android:maxLength="11"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/pass"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/eyeimg1"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_visibility_24"
                app:tint="@color/white" />

        </RelativeLayout>

        <Button
            android:id="@+id/verifypassbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:background="@drawable/capsuleshapedbutton"
            android:text="Check password" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/update_email"
        android:layout_marginHorizontal="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/transparentback"
        android:paddingHorizontal="15dp"
        android:paddingVertical="40dp"
        >

        <TextView
            android:id="@+id/newtitletv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:paddingHorizontal="20dp"
            android:text="@string/updateemail"
            android:textColor="#ffff"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/changeemailbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:background="@drawable/capsuleshapedbutton"
            android:text="UPDATE EMAILID" />

    </LinearLayout>

</RelativeLayout>